prevents api names from wrapping

--- a/app/assets/stylesheets/provider/admin/_dashboard.scss
+++ b/app/assets/stylesheets/provider/admin/_dashboard.scss
@@ -30,6 +30,7 @@
     color: $font-color;
     min-width: 10%;
     float: left;
+    max-width: 40%;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
     cursor: pointer;
@@ -334,8 +335,6 @@
 .DashboardSection-header {
   width: 100%;
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
 
   &--extended {
     border-bottom: $border-width solid $border-color;
@@ -344,7 +343,7 @@
 }
 
 .DashboardNavigation {
-  flex: 1 1 0%;
+  flex: 1 1 0%; // Need to specify flex-basis for IE11 compatibility
 
   #api_filter + &--services {
     margin-top: line-height-times(2/3);
@@ -356,6 +355,7 @@
     li {
       float: right;
       padding: 0;
+      float: right;
     }
   }
 
